--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href={{ url_for('static', filename='css/styles.css')}}>
     <title>Simmer</title>
 </head>
 <body>
 
-    <h1>im part of the base temlate</h1>
+    <nav class="navbar">
+        <ul>
+            <li><a href="{{ url_for('home') }}">Simmer + logo</a></li>
+            <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
+            <li><a href="{{ url_for('login') }}">login</a></li>
+            <li><a href="{{ url_for('register') }}">register</a></li>
+        </ul>
+    </nav>
     {% block content %}
     {% endblock %}
     
