--- a/templates/base.html
+++ b/templates/base.html
@@ -17,38 +17,39 @@
 </head>
 <body>
 
-    
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-        <div class="container">
-            <a class="navbar-brand" href="{{ url_for('home') }}"><img src={{ url_for('static', filename='assets/img/simmer-logo.png')}} alt="..." /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                Menu
-                <i class="fas fa-bars ms-1"></i>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                    <li><a href="{{ url_for('home') }}">Simmer + logo</a></li>
-                    <li><a href="{{ url_for('get_recipes') }}">recipes</a></li>
-                    <li><a href="{{ url_for('login') }}">login</a></li>
-                    <li><a href="{{ url_for('register') }}">register</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <header>
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+                <div class="container">
+                    <a class="navbar-brand" href="{{ url_for('home') }}"><img src="{{ url_for('static', filename='assets/img/simmer-logo.png')}}" alt="..." /></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                        Menu
+                        <i class="fas fa-bars ms-1"></i>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarResponsive">
+                        <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                            <li><a href="{{ url_for('home') }}">Simmer + logo</a></li>
+                            <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
+                            <li><a href="{{ url_for('login') }}">Login</a></li>
+                            <li><a href="{{ url_for('register') }}">Register</a></li>
+                            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+    </header>
 
 
 
 
 
 
-
-
+    {% block content %}
+    {% endblock %}
      <!-- Bootstrap core JS-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
      <!-- Core theme JS-->
-     <script src="href={{ url_for('static', filename='js/scripts.js')}}"></script>
-    {% block content %}
-    {% endblock %}
+     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    
     
 </body>
 </html>
