--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container Card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <form method ="POST" action="{{ url_for('register') }}">
+            <div class="row align-items-stretch mb-5">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <!-- username input-->
+                        <input class="form-control" id="username" name ="username" type="text" placeholder="Username *" class="validate" />
+                        
+                    </div>
+                    <div class="form-group">
+                        <!-- password input-->
+                        <input class="form-control" id="password" name = "password" type="password" placeholder="Password *" class="validate" />
+                        
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-primary" type="submit">Register</a>
+                    </div>
+                
+                </div>
+                
+            </div>
+      </form>
+      
+    </div>
+  </div>
 
 
 
