--- a/templates/register.html
+++ b/templates/register.html
@@ -10,16 +10,18 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <!-- username input-->
-                        <input class="form-control" id="username" name ="username" type="text" placeholder="Username *" class="validate" />
+                        <input  id="username" name ="username" type="text" placeholder="Username *" class="validate" />
                         
                     </div>
                     <div class="form-group">
                         <!-- password input-->
-                        <input class="form-control" id="password" name = "password" type="password" placeholder="Password *" class="validate" />
+                        <input  id="password" name = "password" type="password" placeholder="Password *" class="validate" />
                         
                     </div>
                     <div>
-                        <a href="#" class="btn btn-primary" type="submit">Register</a>
+                        <button>
+                            <a  class="btn btn-primary" type="submit">Register</a>
+                        </button>
                     </div>
                 
                 </div>
