added registration form input validation with flash messages

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,13 +40,26 @@
             </nav>
     </header>
 
+    <section>
+        <!--flash messages-->
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class = "row flash">
+                        <h4 class="center-align">{{ message }}</h4>
+                    </div>
+                {% endfor %}
+            {% endif %}        
+        {% endwith%}
+    </section>
 
 
 
-
-
-    {% block content %}
-    {% endblock %}
+    <main class="container-fluid">
+        {% block content %}
+        {% endblock %}
+    </main>
+    
      <!-- Bootstrap core JS-->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
      <!-- Core theme JS-->
