--- a/templates/register.html
+++ b/templates/register.html
@@ -10,12 +10,14 @@
                 <div class="col-md-6">
                     <div class="form-group">
                         <!-- username input-->
-                        <input  id="username" name ="username" type="text" placeholder="Username *" class="validate" />
+                        <input  id="username" name ="username" type="text" placeholder="Username *" class="validate" 
+                        minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$"/>
                         
                     </div>
                     <div class="form-group">
                         <!-- password input-->
-                        <input  id="password" name = "password" type="password" placeholder="Password *" class="validate" />
+                        <input  id="password" name = "password" type="password" placeholder="Password *" class="validate" 
+                        minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$"/>
                         
                     </div>
                     <div>
