--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,47 @@
 {% extends "base.html" %}
 {% block content %}
 
+<div class="container Card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Log in</h5>
+      <form method ="POST" action="{{ url_for('login') }}">
+            <div class="row align-items-stretch mb-5">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <!-- username input-->
+                        <input  id="username" name ="username" type="text" placeholder="Username *" class="validate" 
+                        minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$"/>
+                        
+                    </div>
+                    <div class="form-group">
+                        <!-- password input-->
+                        <input  id="password" name = "password" type="password" placeholder="Password *" class="validate" 
+                        minlength="5" maxlength="15" required pattern="^[a-zA-Z0-9]{5,15}$"/>
+                        
+                    </div>
+                    <div>
+                        <button>
+                            <a  class="btn btn-primary" type="submit">Log in</a>
+                        </button>
+                    </div>
+                
+                </div>
+                
+            </div>
+      </form>
+      
+    </div>
+    <div class="row">
+        <div class="col s12 ">
+            <p class="center-align">
+                Not a member yet? Please<a href="{{ url_for('register') }}"> register here</a>
+            </p>
+        </div>
+    </div>
+  </div>
+
+
 
 
 
