--- a/templates/register.html
+++ b/templates/register.html
@@ -33,6 +33,13 @@
       
     </div>
   </div>
+  <div class="row">
+    <div class="col s12 ">
+        <p class="center-align">
+            Already registered? Please<a href="{{ url_for('login') }}"> Log in here</a>
+        </p>
+    </div>
+</div>
 
 
 
