--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
                             <li><a href="{{ url_for('home') }}">Home</a></li>
+                            <li><a href="{{ url_for('profile', username=session["user"]) }}">Profile</a></li>
                             <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
                             <li><a href="{{ url_for('login') }}">Login</a></li>
                             <li><a href="{{ url_for('register') }}">Register</a></li>
