--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
                             {% if session.user %}
                                 <li><a href="{{ url_for('profile', username=session["user"]) }}">Profile</a></li>
                                 <li><a href="{{ url_for('get_recipes') }}">Recipes</a></li>
+                                <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
                                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
                             {% else %}
                                 <li><a href="{{ url_for('login') }}">Login</a></li>
