--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -20,6 +20,7 @@
                     <div class="portfolio-caption-heading">{{ recipe.recipe_title }}</div>
                     
                 </div>
+                <p><em>by: {{ add_recipe.created_by }}</em></p>
             </div>
         </div>
         
