--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -10,6 +10,8 @@
         <div class="col-lg-4 col-sm-6 mb-4">
             <!-- recipe item 1-->
             <div class="portfolio-item">
+                <button type="button" class="btn btn-outline-primary">Edit Recipe</button>
+
                 <a class="portfolio-link" data-bs-toggle="modal" href="INSERT RANDOM RECIPE LINK HERE">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
