--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="">Add Recipe</h3>
+<h3 class="">Edit Recipe</h3>
 
-<form class="col s12" method="POST" action="{{ url_for("add_recipe") }}">
+<form class="col s12" method="POST" action="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">
     <div class="form-row ">
       <div class="form-group col-md-6">
         <label for="recipe_title">Recipe Title</label>
@@ -59,7 +59,7 @@
     </div>
     <div>
       <button>
-          <a  class="btn btn-primary" type="submit">Submit Recipe</a>
+          <a  class="btn btn-primary" type="submit">Edit Task</a>
       </button>
   </div>
   </form>
