--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -10,9 +10,9 @@
         <div class="col-lg-4 col-sm-6 mb-4">
             <!-- recipe item 1-->
             <div class="portfolio-item">
-                <button type="button" class="btn btn-outline-primary">Edit Recipe</button>
+                <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
 
-                <a class="portfolio-link" data-bs-toggle="modal" href="INSERT RANDOM RECIPE LINK HERE">
+                <a class="portfolio-link" data-bs-toggle="modal" href="">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                     </div>
