--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -28,40 +28,20 @@
         <textarea type="text" name="recipe_method" class="form-control validate" id="recipe_method" required></textarea>
       </div>
     </div>
-    <div class="form-row">  
+    <div class="form-row"> 
       <div class="form-group col-md-6">
         <label for="recipe_cooking_time">Total Cooking time (minutes)</label>
-        <select class="form-control validate" name="recipe_cooking_time" id="recipe_cooking_time">
-          <option>10</option>
-          <option>20</option>
-          <option>30</option>
-          <option>40</option>
-          <option>50</option>
-          <option>60</option>
-          <option>70</option>
-          <option>80</option>
-          <option>90</option>
-          <option>100</option>
-          <option>110</option>
-          <option>120</option>
-          <option>130</option>
-          <option>140</option>
-          <option>150</option>
-          <option>160</option>
-          <option>170</option>
-          <option>180</option>
-          <option>190</option>
-          <option>200</option>
-          <option>210</option>
-          <option>220</option>
-        </select>
+        <input type="text" name="recipe_cooking_time" 
+         class="form-control validate" id="recipe_cooking_time">
       </div>
     </div>
-    <div>
-      <button>
-          <a  class="btn btn-primary" type="submit">Submit Recipe</a>
-      </button>
-  </div>
+    <div class ="form-row">
+      <div class=" col s12 center-align">
+        <button>
+            <a  class="btn btn-primary" type="submit">Submit recipe</a>
+        </button>
+      </div>  
+    </div>
   </form>
 
 
