--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -7,61 +7,51 @@
     <div class="form-row ">
       <div class="form-group col-md-6">
         <label for="recipe_title">Recipe Title</label>
-        <input type="text" name="recipe_title" class="form-control validate" id="recipe_title" minlength="5" maxlength="50" required>
+        <input type="text" name="recipe_title" class="form-control validate" 
+            value="{{ recipe.recipe_title }}" id="recipe_title" minlength="5" maxlength="50" required>
       </div>
     </div>
     <div class="form-row"> 
       <div class="form-group col-md-6">
         <label for="recipe_image_url">Recipe Image Url</label>
-        <input type="text" name="recipe_image_url" class="form-control validate" id="recipe_image_url">
+        <input type="text" name="recipe_image_url" 
+        value="{{ recipe.recipe_image_url }}" class="form-control validate" id="recipe_image_url">
       </div>
     </div>
     <div class="form-row"> 
       <div class="form-group col-md-6">
         <label for="recipe_ingredients">Ingredients</label>
-        <textarea type="text" name="recipe_ingredients" class="form-control validate" id="recipe_ingredients" required></textarea>
+        <textarea type="text" name="recipe_ingredients" class="form-control validate" id="recipe_ingredients" required>
+        {{- recipe.recipe_ingredients -}}  
+        </textarea>
       </div>
     </div>
     <div class="form-row">  
       <div class="form-group col-md-6">
         <label for="recipe_method">Recipe Method</label>
-        <textarea type="text" name="recipe_method" class="form-control validate" id="recipe_method" required></textarea>
+        <textarea type="text" name="recipe_method" class="form-control validate" id="recipe_method" required>
+        {{- recipe.recipe_method -}}  
+        </textarea>
       </div>
     </div>
-    <div class="form-row">  
+    <div class="form-row"> 
       <div class="form-group col-md-6">
         <label for="recipe_cooking_time">Total Cooking time (minutes)</label>
-        <select class="form-control validate" name="recipe_cooking_time" id="recipe_cooking_time">
-          <option>10</option>
-          <option>20</option>
-          <option>30</option>
-          <option>40</option>
-          <option>50</option>
-          <option>60</option>
-          <option>70</option>
-          <option>80</option>
-          <option>90</option>
-          <option>100</option>
-          <option>110</option>
-          <option>120</option>
-          <option>130</option>
-          <option>140</option>
-          <option>150</option>
-          <option>160</option>
-          <option>170</option>
-          <option>180</option>
-          <option>190</option>
-          <option>200</option>
-          <option>210</option>
-          <option>220</option>
-        </select>
+        <input type="text" name="recipe_cooking_time" 
+        value="{{ recipe.recipe_cooking_time }}" class="form-control validate" id="recipe_cooking_time">
       </div>
     </div>
-    <div>
-      <button>
-          <a  class="btn btn-primary" type="submit">Edit Task</a>
-      </button>
-  </div>
+    
+    <div class ="form-row">
+      <div class=" col s12 center-align">
+        <button>
+          <a href="{{ url_for('get_recipes') }}" class="btn btn-danger" type="submit">Cancel</a>
+        </button>
+        <button>
+            <a  class="btn btn-primary" type="submit">Edit Task</a>
+        </button>
+      </div>  
+    </div>
   </form>
 
 
