--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -12,6 +12,7 @@
             <div class="portfolio-item">
                 {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
                     <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
+                    <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
                 {% endif %}
                 <a class="portfolio-link" data-bs-toggle="modal" href="">
                     <div class="portfolio-hover">
