--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
             {% if messages %}
                 {% for message in messages %}
                     <div class = "row flash">
-                        <h4 class="center-align">{{ message }}</h4>
+                        <h4 class="center-align d-flex justify-content-center">{{ message }}</h4>
                     </div>
                 {% endfor %}
             {% endif %}        
