--- a/templates/edit_recipe.html
+++ b/templates/edit_recipe.html
@@ -48,7 +48,7 @@
           <a href="{{ url_for('get_recipes') }}" class="btn btn-danger" type="submit">Cancel</a>
         </button>
         <button>
-            <a  class="btn btn-primary" type="submit">Edit Task</a>
+            <a  class="btn btn-primary" type="submit">Save Changes</a>
         </button>
       </div>  
     </div>
