--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,14 +2,39 @@
 {% block content %}
 
 <div class="container Card" style="width: 18rem;">
-    <img class="card-img-top" src="..." alt="Card image cap">
+    
     <div class="card-body">
-      <h5 class="card-title">{{ username }}'s Profile</h5>
-      
+      <h5 class="card-title">Welcome {{ username }}!</h5>
+      <i class="far fa-smile-beam fa-3x d-flex justify-content-center"></i>
       
     </div>
     
 </div>
+
+<div class="user_recipe_section">
+  <div>
+    <h3 class="d-flex justify-content-center">Your recipes</h3>
+    
+  </div>
+ 
+</div>
+{% for recipe in recipes %}
+{% if session.user|lower == recipe.created_by|lower %}  
+    <div class="container">
+        <div class="card-columns ">                                  <!--created with help from the card documentation at https://getbootstrap.com/docs/4.0/components/card/#using-custom-css-->
+            <div class="card mb-4">
+            <img class="card-img-top" src="{{ recipe.recipe_image_url}}" alt="recipe image">
+            <div class="card-body">
+                <h5 class="card-title">{{ recipe.recipe_title }}</h5>
+                <p class="card-text"></p>
+                <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
+                <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
+            </div>
+        </div>
+    </div> 
+{% endif %}
+{% endfor %}
+
 
 
 
