--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -21,16 +21,18 @@
     
     {% for recipe in recipes %}
         <div class="container">
-            <div class="card-deck ">                                  <!--created with help from the card documentation at https://getbootstrap.com/docs/4.0/components/card/#using-custom-css-->
+            <div class="card-columns ">                                  <!--created with help from the card documentation at https://getbootstrap.com/docs/4.0/components/card/#using-custom-css-->
                 <div class="card mb-4">
-                <img class="card-img-top" src="{{ recipe.recipe_image_url}}" alt="recipe image">
+                <a>
+                    <img class="card-img-top" src="{{ recipe.recipe_image_url}}" alt="recipe image">
+                </a>    
                 <div class="card-body">
                     <h5 class="card-title">{{ recipe.recipe_title }}</h5>
                     <p class="card-text"></p>
                     {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
                             <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
                             <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
-                        {% endif %}
+                    {% endif %}
                 </div>
                 <div class="card-footer">
                     <small class="text-muted"><em>by: {{ recipe.created_by }}</em></small>
@@ -39,5 +41,4 @@
             </div>
         </div>        
     {% endfor %}
-    
 {% endblock %}
