--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,7 +3,7 @@
 
 <h3 class="">Add Recipe</h3>
 
-<form class="col s12" method="POST" action="{{ url_for("add_recipe") }}">
+<form class="col s12 col col-md-6 " method="POST" action="{{ url_for("add_recipe") }}">
     <div class="form-row ">
       <div class="form-group col-md-6">
         <label for="recipe_title">Recipe Title</label>
@@ -42,7 +42,7 @@
         </button>
       </div>  
     </div>
-  </form>
+</form>
 
 
 
