--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href={{ url_for('static', filename='css/styles.css')}}>
+    <link rel="stylesheet" href={{url_for('static', filename='css/styles.css')}}>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="static/assets/favicon/favicon.ico" />
     
@@ -23,7 +23,7 @@
                 <div class="container">
                     <div class="simmer-logo">
                         <a class="navbar-brand" href="{{ url_for('home') }}">
-                            <i class="fas fa-utensils"></i>
+                            <i class="fas fa-utensils fa-2x"></i>
                             <h1 id="simmer-logo-text">SIMMER</h1>
                         </a> 
                     </div>
@@ -36,13 +36,13 @@
                         <ul class="navbar-nav text-uppercase ms-auto px-4 py-lg-0">
                             <li><a class="btn btn-primary" role="button" href="{{ url_for('home') }}">Home </a></li>
                             {% if session.user %}
-                                <li><a class="btn btn-primary mx-lg-1" role="button" href="{{ url_for('profile', username=session["user"]) }}">Profile </a></li>
-                                <li><a class="btn btn-primary mx-lg-1" role="button" href="{{ url_for('get_recipes') }}">Recipes </a></li>
-                                <li><a class="btn btn-primary mx-lg-1" role="button" href="{{ url_for('add_recipe') }}">Add Recipe </a></li>
-                                <li><a class="btn btn-primary mx-lg-1" role="button" href="{{ url_for('logout') }}">Logout </a></li>
+                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('profile', username=session["user"])}}">Profile </a></li>
+                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('get_recipes') }}">Recipes </a></li>
+                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('add_recipe') }}">Add Recipe </a></li>
+                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('logout') }}">Logout </a></li>
                             {% else %}
-                                <li><a class="btn btn-primary mx-lg-1" role="button" href="{{ url_for('login') }}">Login </a></li>
-                                <li><a class="btn btn-primary mx-lg-1" role="button" href="{{ url_for('register') }}">Register </a></li>
+                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('login') }}">Login </a></li>
+                                <li><a class="btn btn-primary mx-lg-1 nav-button" role="button" href="{{ url_for('register') }}">Register </a></li>
                             {% endif %}
                         </ul>
                     </div>
@@ -72,7 +72,7 @@
 
     
     
-    <footer class="footer py-4 ">
+    <footer class="footer py-4">
         <div class="container navbar-fixed-bottom">
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-start" style="color: white;">Copyright &copy; Callum Jepps 2021</div>
