--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -19,26 +19,42 @@
     
     
     
-    {% for recipe in recipes %}
-        <div class="container">
-            <div class="card-columns ">                                  <!--created with help from the card documentation at https://getbootstrap.com/docs/4.0/components/card/#using-custom-css-->
-                <div class="card mb-4">
-                <a>
-                    <img class="card-img-top" src="{{ recipe.recipe_image_url}}" alt="recipe image">
-                </a>    
-                <div class="card-body">
-                    <h5 class="card-title">{{ recipe.recipe_title }}</h5>
-                    <p class="card-text"></p>
-                    {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
-                            <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
-                            <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
-                    {% endif %}
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted"><em>by: {{ recipe.created_by }}</em></small>
-                </div>
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col text-center mt-3">
+                <h2 class="logo-font">Recipes</h2>
+                <hr class="w-50 mb-1">
+            </div>
+        </div>
+        <div class="row">
+            <div class="product-container col-10 offset-1">
+                <div class="row mt-1 mb-2"></div>
+                <div class="row">
+                    {% for recipe in recipes %}
+                        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                            <div class="card h-100 border-0">
+                                <a href="#">
+                                    <img class="card-img-top img-fluid" src="{{ recipe.recipe_image_url}}" alt="">
+                                </a>
+                                <div class="card-body pb-0">
+                                    <p class="mb-0">{{ recipe.recipe_title }}</p>
+                                </div>
+                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                    <div class="row">
+                                        <div class="col">
+                                            <p class="card-text"></p>
+                                            {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
+                                                    <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
+                                                    <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
                 </div>
             </div>
-        </div>        
-    {% endfor %}
+        </div>
 {% endblock %}
