--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -5,7 +5,7 @@
 
     <form  action="{{ url_for('search') }}" method= "post" class="input-group d-flex justify-content-center">                      <!--search bar for recipes. taken from https://mdbootstrap.com/docs/standard/forms/search/-->
         <div class="form-outline">
-          <input type="text" id="query" name="query" class="form-control validate" minlength="3" required/>
+          <input type="text" id="query" name="query" placeholder="Search your recipe here" class="form-control validate" minlength="3" required/>
           <label class="form-label" for="query">Search</label>
         </div>
         <div>
@@ -19,7 +19,6 @@
     
     
     
-
     <div class="container-fluid">
         <div class="row">
             <div class="col text-center mt-3">
