--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,7 @@
 <div class="container Card" style="width: 18rem;">
     <img class="card-img-top" src="..." alt="Card image cap">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
+      <h5 class="card-title">Register now!</h5>
       <form method ="POST" action="{{ url_for('register') }}">
             <div class="row align-items-stretch mb-5">
                 <div class="col-md-6">
