Added recipe details page with app routing.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11826,10 +11826,14 @@ form {
 
 
 main.container-fluid {
-  margin-top: 20vh;
-  margin-bottom: 10vh;
   height: auto;
 }
+
+.login_form_container {
+  margin-top: 20vh;
+  margin-bottom: 10vh;
+}
+
 
 .add_recipe_form {
   padding-top: 10vh;
