--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -3,7 +3,7 @@
 
 <h3 class="">Add Recipe</h3>
 
-<div class="add_recipe_form row">
+<div class="add_recipe_form row login_form_container">
     <form class="col s12 col col-md-6" method="POST" action="{{url_for("add_recipe")}}">
         <div class="form-row ">
           <div class="form-group col-md-6">
