--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container Card" style="width: 18rem;">
+<div class="container Card login_form_container"  style="width: 18rem;">
     
     <div class="card-body">
       <h5 class="card-title">Log in</h5>
