--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -32,7 +32,7 @@
                     {% for recipe in recipes %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
-                                <a href="#">
+                                <a href="{{ url_for('recipe', recipe_id=recipe._id) }}">
                                     <img class="card-img-top img-fluid" src="{{ recipe.recipe_image_url}}" alt="">
                                 </a>
                                 <div class="card-body pb-0">
@@ -45,6 +45,8 @@
                                             {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
                                                     <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
                                                     <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
+                                                    <a role="button" class="btn btn-outline-success" href="{{ url_for('recipe', recipe_id=recipe._id) }}">Go to Recipe</a>
+
                                             {% endif %}
                                         </div>
                                     </div>
