--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="container Card" style="width: 18rem;">
+<div class="container Card login_form_container" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">Register now!</h5>
       <form method ="POST" action="{{ url_for('register') }}">
