Updated technologies section of readme.

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,29 +15,30 @@
 <div class="container">
   <!--User account sidebar-->
   <div class="row user_account">
-    change password section?
     <!--User recipe card if exists/ else add recipe button-->
     <div class="col-md-9">
       <div class="account_info">
         <h2 class="heading-primary">{{ username }}'s Recipes</h2>
         <div class="container-fluid">
             <div class="row">
-              {% for user_recipe in user_recipes %}
-              <div class="col-sm-12 col-md-6 my-3">
-                  <div class="card card_recipe">
-                      <img src="{{ user_recipe.image }}" alt="Recipe Image" class="img-fluid">
-                      <div class="card-img-overlay">
-                          <h6 class="card_title">{{ user_recipe.recipe_name }}</h6>   
-                      </div>
-                  </div>
-              </div>
-              {% else %}
-              <div class="col-sm-12 col-md-6">
-                <h3 class="heading mb-5">Looks like you haven't created any recipes yet.</h3>
-                <h3 class="heading mb-5">Create one here.</h3>
-                <a class="btn btn-primary" href="{{ url_for('add_recipe')}}" role="button">Add Recipe</a>
-              </div>
-              {% endfor %}
+              {% for recipe in recipes %}
+                {% if session.user|lower == recipe.created_by|lower  %}
+                <div class="col-sm-12 col-md-6 my-3">
+                    <div class="card ">
+                        <img src="{{ recipe.recipe_image_url }}" alt="Recipe Image" class="img-fluid">
+                        <div>
+                            <h6 class="card_title">{{ recipe.recipe_title }}</h6>   
+                        </div>
+                    </div>
+                </div>
+                {% else %}
+                <div class="col-sm-12 col-md-6">
+                  <h3 class="heading mb-5">Looks like you haven't created any recipes yet.</h3>
+                  <h3 class="heading mb-5">Create one here.</h3>
+                  <a class="btn btn-primary" href="{{ url_for('add_recipe')}}" role="button">Add Recipe</a>
+                </div>
+                {% endif %}
+              {% endfor%}
             </div>
         </div>
       </div>
