--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Find your recipe</h2>
-                    <h3 class="section-subheading text-muted">Explore now</h3>
+                    <h3 class="section-subheading text-muted">Explore hundreds of user submitted recipes here</h3>
                 </div>
 
                 <form  action="{{ url_for('search') }}" method= "post" class=" col-md-4 input-group d-flex justify-content-center searchbar" id="searchbar">                      <!--search bar for recipes. taken from https://mdbootstrap.com/docs/standard/forms/search/-->
