--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
     <div class="row">
         <div class="col s12">
             <p class="center-align">
-                Already registered? Please<a href="{{ url_for('login') }}"> Log in here</a>
+                Already registered? Please<a href="{{ url_for('login') }}" class="link-text-color-blue"> Log in here</a>
             </p>
         </div>
     </div>
