--- a/templates/login.html
+++ b/templates/login.html
@@ -34,8 +34,8 @@
     </div>
     <div class="row">
         <div class="col s12 ">
-            <p class="center-align">
-                Not a member yet? Please<a href="{{ url_for('register') }}"> register here</a>
+            <p class="center-align ">
+                Not a member yet? Please<a href="{{ url_for('register') }}" class="link-text-color-blue"> register here</a>
             </p>
         </div>
     </div>
