--- a/templates/profile.html
+++ b/templates/profile.html
@@ -21,13 +21,13 @@
         <div class="container-fluid">
             <div class="row">
               {% for user_recipe in user_recipes %}
-                <div class="col-sm-12 col-md-6 my-3">
-                    <div class="card ">
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3 profile-cards">
+                    <div class="card h-100 border-0">
                       <a href="{{ url_for('recipe', recipe_id=user_recipe._id) }}">
-                        <img src="{{ user_recipe.recipe_image_url }}" alt="Recipe Image" class="img-fluid">
+                        <img src="{{ user_recipe.recipe_image_url }}" alt="Recipe Image" class="img-fluid card-img-top">
                       </a>  
-                        <div>
-                            <h6 class="card_title">{{ user_recipe.recipe_title }}</h6>   
+                        <div class="card-body pb-0">
+                            <h6 class="card_title mb-0">{{ user_recipe.recipe_title }}</h6>   
                         </div>
                     </div>
                 </div>
