--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -45,9 +45,8 @@
                                             {% if session.user|lower == recipe.created_by|lower %}        <!-- if statement only shows edit recipe buttons to the user that created the recipe-->
                                                     <a role="button" class="btn btn-outline-primary" href="{{ url_for('edit_recipe', recipe_id=recipe._id) }}">Edit Recipe</a>
                                                     <a role="button" class="btn btn-outline-danger" href="{{ url_for('delete_recipe', recipe_id=recipe._id) }}">Delete Recipe</a>
-                                                    <a role="button" class="btn btn-outline-success" href="{{ url_for('recipe', recipe_id=recipe._id) }}">Go to Recipe</a>
-
                                             {% endif %}
+                                            <a role="button" class="btn btn-primary" href="{{ url_for('recipe', recipe_id=recipe._id) }}">Go to Recipe</a>
                                         </div>
                                     </div>
                                 </div>
