Updated validator testing section.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";     /* css file from https://startbootstrap.com/theme/agency */
+   /* css file from https://startbootstrap.com/theme/agency */
 
 html, body {
   height: 100%;
