--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h3 class="">Add Recipe</h3>
+<h3 class="form-title">Add Recipe</h3>
 
 <div class="add_recipe_form row login_form_container">
     <form class="col s12 col col-md-6" method="POST" action="{{url_for("add_recipe")}}">
