Fixed linkedin link in footer.

--- a/templates/base.html
+++ b/templates/base.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-4 text-lg-start" style="color: white;">Copyright &copy; Callum Jepps 2021</div>
                 <div class="col-lg-4 my-3 my-lg-0">
                     <a class="btn btn-dark btn-social mx-2" href="https://github.com/CJepps/Simmer-recipe-sharing"><i class="fab fa-github"></i></a>
-                    <a class="btn btn-dark btn-social mx-2" href="www.linkedin.com/in/callum-jepps-a4a8b3101"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/callum-jepps-a4a8b3101/"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
